--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ img {
   align-items: center;
   height: 9rem;
   width: 100%;
-  padding: 0 6rem;
+  padding: 0 4rem;
   z-index: 100;
   transition: 0.3s;
 }
@@ -696,4 +696,381 @@ h4 {
   color: #bbb;
   font-size: 1.5rem;
   font-weight: 400;
+}
+
+/* Nav Icon */
+.nav__container-icon {
+  display: none;
+}
+
+@media screen and (max-width: 950px) {
+  .header__img {
+    margin-top: 6rem;
+  }
+
+  .features {
+    gap: 2rem;
+    margin: 0 1rem;
+  }
+
+  .footer__link {
+    font-size: 1.3rem;
+  }
+
+  .modal {
+    width: 80%;
+    padding: 3rem 4rem;
+    box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    transition: all 0.5s;
+  }
+}
+
+@media screen and (max-width: 836px) {
+  .nav__link:link,
+  .nav__link:visited {
+    font-size: 1.2rem;
+  }
+
+  h1 {
+    font-size: 4.5rem;
+    line-height: 1.35;
+  }
+
+  h4 {
+    font-size: 1.7rem;
+    font-weight: 500;
+  }
+
+  h3.section__header {
+    font-size: 2.2rem;
+  }
+
+  .operations__tab {
+    font-size: 1.1rem;
+  }
+
+  .footer__link {
+    font-size: 1rem;
+  }
+}
+
+.nav__container-icon {
+  width: 4rem;
+  height: 4rem;
+  background: var(--gradient-primary);
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.nav__container-icon div {
+  width: 2rem;
+  height: 4rem;
+  margin-inline: auto;
+  position: relative;
+}
+
+.nav__container-icon span {
+  background: #fff;
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s, width 0.5s;
+}
+
+.nav__container-icon .line-1 {
+  transform: translate(-50%, -8px);
+}
+
+.nav__container-icon .line-3 {
+  transform: translate(-50%, 6px);
+}
+
+.openmenu .line-1 {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+.openmenu .line-3 {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.openmenu .line-2 {
+  width: 0;
+}
+
+@media screen and (max-width: 780px) {
+  .nav__links {
+    display: none;
+  }
+
+  .header__img {
+    margin-top: 6rem;
+  }
+
+  .nav__container-icon {
+    display: block;
+  }
+
+  .nav-mobile {
+    display: grid;
+    grid-template-rows: auto 1fr, 1fr 1fr;
+    grid-template-columns: auto 1fr, 1fr;
+    height: 24rem;
+    padding-bottom: 25rem;
+    grid-template-rows: 4rem, 20rem;
+    box-shadow: 2px 2px 10px #33333368;
+    margin-bottom: 4rem;
+
+    .nav__links li {
+      position: relative;
+      padding-bottom: 1rem;
+    }
+
+    .nav__links li:nth-child(1) {
+      padding-top: 1rem;
+    }
+
+    .nav__links li:nth-child(1)::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      border-radius: 2rem;
+      background: var(--gradient-primary);
+    }
+    .nav__links li:nth-child(2)::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      border-radius: 2rem;
+      background: var(--gradient-primary);
+    }
+
+    .nav__links li:nth-child(3)::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      border-radius: 2rem;
+      background: var(--gradient-primary);
+    }
+
+    .nav__links li:nth-child(4) {
+      text-align: center;
+      margin: 1rem 2rem 0rem 2rem;
+    }
+
+    .nav__logo {
+      margin-top: 2.4rem;
+    }
+
+    .nav__container-icon {
+      margin-top: 2.4rem;
+    }
+
+    .nav__links {
+      display: block;
+      grid-column: span 3;
+      margin: 0;
+      padding: 0;
+      text-align: start;
+      .nav__item {
+        margin: 0;
+      }
+    }
+  }
+
+  .nav__container-icon {
+    grid-column: 3;
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .nav {
+    padding: 0 1rem;
+  }
+
+  /* GENERAL */
+  .section {
+    padding: 6rem 3rem;
+  }
+  /* HEADER */
+  .header {
+    padding: 0 3rem;
+    height: 100%;
+    display: flex;
+  }
+
+  .header__title {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* FEATURES */
+  .features {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .computer-img-details {
+    order: -1;
+  }
+
+  .card-img {
+    order: 3;
+  }
+
+  /* OPERATIONS */
+
+  .operations__icon {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 2rem;
+    float: right;
+    margin: 0;
+  }
+
+  .operations__icon svg {
+    height: 2.6rem;
+    width: 2.6rem;
+  }
+
+  .operations__header {
+    font-size: 2rem;
+  }
+
+  .operations__tab {
+    margin-right: 1.5rem;
+    padding: 1rem 2rem;
+  }
+
+  .operations__tab span {
+    font-weight: 500;
+    display: none;
+  }
+
+  .operations__content {
+    /* JUST PRESENTATIONAL */
+    font-size: 1.5rem;
+    padding: 2.5rem 1.5rem 6.5rem 1.5rem;
+  }
+
+  .operations__content--active {
+    display: block;
+    grid-template-columns: 7rem 1fr;
+    column-gap: 2rem;
+    row-gap: 0.5rem;
+  }
+
+  /* SLIDER */
+  .slider {
+    max-width: 100rem;
+    height: 75rem;
+    margin: 0 auto;
+    position: relative;
+
+    /* IN THE END */
+    overflow: hidden;
+  }
+
+  .slide {
+    margin-top: 10rem;
+
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* THIS creates the animation! */
+    transition: transform 1s;
+  }
+
+  /* TESTIMONIALS */
+  .testimonial {
+    width: 65%;
+    position: relative;
+  }
+
+  /* FOOTER */
+  .footer {
+    padding: 8rem 2rem;
+  }
+
+  .footer__nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+    gap: 2rem;
+  }
+
+  .footer__item {
+    margin-right: 2rem;
+  }
+
+  .footer__link {
+    font-size: 1.6rem;
+    color: #eee;
+    text-decoration: none;
+    transition: 0.5s;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  /* SLIDER */
+  .slider {
+    max-width: 100rem;
+    height: 95rem;
+    margin: 0;
+    position: relative;
+
+    /* IN THE END */
+    overflow: hidden;
+  }
+
+  .slide {
+    margin-top: 20rem;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* THIS creates the animation! */
+    transition: transform 1s;
+  }
+
+  .testimonial__location {
+    font-size: 1.5rem;
+    grid-column: span 2;
+    text-align: center;
+  }
+
+  .slider__btn {
+    height: 4rem;
+    width: 4rem;
+    font-size: 3rem;
+  }
+
+  .testimonial::before {
+    content: '\201C';
+    position: absolute;
+    top: -5.7rem;
+    left: -6rem;
+    line-height: 1;
+    font-size: 20rem;
+    font-family: inherit;
+    color: var(--color-primary);
+    z-index: -1;
+  }
 }
